# server/internal/app/middlewares/tokenauth.go
@@ -4,17 +4,37 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/parkgang/modern-board/internal/app/models"
 	"github.com/parkgang/modern-board/internal/pkg/auth"
 )
 
 func TokenAuthMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		err := auth.TokenValid(c.Request)
-		if err != nil {
-			c.JSON(http.StatusUnauthorized, err.Error())
+		// 토큰 만료 여부 및 서명 검사
+		if err := auth.TokenValid(c.Request); err != nil {
+			c.JSON(http.StatusUnauthorized, models.ErrResponse{
+				Message: err.Error(),
+			})
 			c.Abort()
 			return
 		}
+		// redis에 해당 토큰이 존재하는지 검사
+		tokenAuth, err := auth.ExtractTokenMetadata(c.Request)
+		if err != nil {
+			c.JSON(http.StatusUnauthorized, models.ErrResponse{
+				Message: err.Error(),
+			})
+			c.Abort()
+			return
+		}
+		if _, err := auth.FetchAuth(tokenAuth); err != nil {
+			c.JSON(http.StatusUnauthorized, models.ErrResponse{
+				Message: err.Error(),
+			})
+			c.Abort()
+			return
+		}
+
 		c.Next()
 	}
 }
